Index View Complete

--- a/csharp-capstone/Capstone.Web/Views/Home/Index.cshtml
+++ b/csharp-capstone/Capstone.Web/Views/Home/Index.cshtml
@@ -1,4 +1,30 @@
-﻿@{
+﻿@model IList<Park>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
+
+<h2>Parks</h2>
+<table class="table">
+
+    <tbody>
+
+        @foreach (var park in Model)
+        {
+        <tr>
+            <td>
+                <a asp-controller="home" asp-action="detail" asp-route-id="@park.ParkCode"><img src="~/images/@(park.ParkCode).jpg" /></a>
+            </td>
+            <td>
+                <p>@park.ParkName</p>
+                <p>@park.State</p>
+                <p>@park.Description</p>
+            </td>
+        </tr>
+
+        }
+
+    </tbody>
+
+</table>
