--- a/csharp-capstone/Capstone.Web/Views/Survey/AddSurveyPost.cshtml
+++ b/csharp-capstone/Capstone.Web/Views/Survey/AddSurveyPost.cshtml
@@ -1,6 +1,7 @@
 ﻿@model SurveyPost
 @{
     ViewData["Title"] = "AddSurveyPost";
+    IList<SelectListItem> items = new List<SelectListItem>();
 }
 
 <div class="container">
@@ -10,16 +11,37 @@
     <form asp-controller="survey" asp-action="addsurveypost" method="post">
         <div>
             <label asp-for="SurveyParks">Favorite Park: </label>
-            <select asp-for="SurveyParks" asp-items="Model."></select>
+            @* <select asp-for="SurveyParks" asp-items="items">
+                @foreach (SelectListItem item in Model.SurveyParks)
+                {
+                    <option value="@item.Value">@item.Text</option>
+                }
+            </select>*@
+            <select asp-for="ParkCode" asp-items="Model.SurveyParks"></select>
         </div>
         <div>
             <label asp-for="EmailAddress">Email Address: </label>
-            <input type="email" asp-for="EmailAddress"/>
+            <input type="email" asp-for="EmailAddress" />
         </div>
         <div>
             <label asp-for="State">State of Residence: </label>
             <select asp-for="State" asp-items="Model.States"></select>
         </div>
+
+        <div>
+            <label>Activity Level: </label>
+            <input type="radio" name="activityLevel" />
+            <label asp-for="ActivityLevel">Sedentary</label>
+            <input type="radio" name="activityLevel" />
+            <label asp-for="ActivityLevel">Inactive</label>
+            <input type="radio" name="activityLevel" />
+            <label asp-for="ActivityLevel">Active</label>
+            <input type="radio" name="activityLevel" />
+            <label asp-for="ActivityLevel">Extremely Active</label>
+        </div>
+
+    </form>
+    <form asp-controller="survey" asp-action="addsurveypost" method="post">
         <input class="btn btn-lg" type="submit" value="Submit Survey!" />
     </form>
 </div>
