--- a/csharp-capstone/Capstone.Web/Views/Survey/Index.cshtml
+++ b/csharp-capstone/Capstone.Web/Views/Survey/Index.cshtml
@@ -22,7 +22,7 @@
                     <td>
                         <p>@park.surveyPark.ParkName</p>
                         <p>@park.surveyPark.Description</p>
-                        <p>@park.surveyPark.</p>
+                        <p>@park.Count</p>
                     </td>
                 </tr>
 
