Detail/Weather view complete, F/C still broken

--- a/csharp-capstone/Capstone.Web/Views/Survey/AddSurveyPost.cshtml
+++ b/csharp-capstone/Capstone.Web/Views/Survey/AddSurveyPost.cshtml
@@ -32,13 +32,13 @@
 
         <div>
             <label>Activity Level: </label>
-            <input type="radio" name="activityLevel" />
+            <input type="radio" name="activityLevel" value="sedentary" />
             <label asp-for="ActivityLevel">Sedentary</label>
-            <input type="radio" name="activityLevel" />
+            <input type="radio" name="activityLevel" value="inactive" />
             <label asp-for="ActivityLevel">Inactive</label>
-            <input type="radio" name="activityLevel" />
+            <input type="radio" name="activityLevel" value="active" />
             <label asp-for="ActivityLevel">Active</label>
-            <input type="radio" name="activityLevel" />
+            <input type="radio" name="activityLevel" value="extremely active"/>
             <label asp-for="ActivityLevel">Extremely Active</label>
         </div>
         <input class="btn btn-lg" type="submit" value="Submit Survey!" />
