--- a/csharp-capstone/Capstone.Web/wwwroot/css/site.css
+++ b/csharp-capstone/Capstone.Web/wwwroot/css/site.css
@@ -63,13 +63,43 @@ body {
 
 /* Style Home Index View */
 .background {
-    background-image: url(http://vunature.com/wp-content/uploads/2016/11/mountains-picture-nature-gallery-1920x1080.jpg);
+    background-image: url('/images/homeBackground.jpg');
     position: fixed;
+    background-size: cover;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: -1000;
+    z-index: -100;
+}
+
+.head {
+    justify-content:center;
+
+}
+
+.headItem {
+    color: white;
+    display: block;
+    margin-top: 1rem;
+    float: left;
+}
+
+.head hr {
+    margin-top: 2rem;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, #4a6741, #3f5a36, #374f2f);
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: space-around;
+    flex-direction: row;
 }
 
 .body-content {
@@ -78,25 +108,117 @@ body {
     margin-right: 3.5rem;
 }
 
-.parkimage {
+.homeParkImage {
+    display: block;
+    justify-content: center;
     width: 15vw;
-
-    border: 2px
+    border: 2px;
+    margin: 0 auto;
+    font-size: 0;
+    filter:blur(4px);
+    border-radius: 3px;
+    border: 1px solid rgba(0,0,0,.8);
+    opacity: .8;
 }
 
 .parkName {
     font-family: PT Sans Narrow;
     font-size: 2.0em;
     color: silver;
+    border-bottom: 1px solid white;
+    text-align: center;
 }
 
-.parkcontainer {
-    width: 30rem;
-    height: 53rem;
-    border: 1px solid silver;
-    float: left;
-    margin: 1.66%;
-    border-radius: 15px;
+.parkState {
+    font-family: PT Sans Narrow;
+    font-size: 2.0em;
+    color: silver;
+}
+
+.parkDescription {
+    font-family: PT Sans Narrow;
+    font-size: 2rem;
+    color: silver;
+}
+
+.parkContainer {
+    width: 30vw;
+    border: 1px solid rgb(110, 97, 47);
+    border-radius: 3px;
+    padding: 20px;
+    background-color: rgba(0,0,0, 0.6);
+    -webkit-transition: transform 0.2s;
+    height: 530px;
+    overflow-y: auto;
+    display: block;
+    margin: 0 .5vw;
+}
+
+    .parkContainer:not(:nth-of-type(1)) {
+        margin-top: 1.5vh;
+    }
+
+.parkContainer:nth-of-type(1) {
+    margin-top: 1vh;
+}
+
+.parkContainer:nth-of-type(2) {
+    margin-top: 1vh;
+}
+
+.parkContainer:nth-of-type(3) {
+    margin-top: 1vh;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    height: 510px;
+    border-radius: 80px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 10px 0 6px rgba(255,255,255,.3);
+}
+
+.parkItems {
+    flex-basis: 50%;
+}
+
+.parkContainer:hover {
+    transform: scale(1.03);
+    height: 530px;
+    -webkit-transition: transform 0.2s;
     background-color: rgba(0,0,0, 0.8);
 }
+    .parkContainer:hover .homeParkImage {
+        filter: blur(0);
+        image-rendering: optimizeQuality;
+        transition: all .3s;
+        opacity: 1;
+    }
 
+    .homeParkImage:hover {
+        transition: all .3s;
+        transform: scale(1.06);
+    }
+
+    .tabs {
+        display: inline-block;
+    }
+
+.logo {
+    display: inline-block;
+    height: 4vh;
+    width: auto;
+    margin-top: -1vh;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 6vh;
+}
