--- a/csharp-capstone/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/csharp-capstone/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta rel="icon" href="/images/geek.png" typeof="image/x-icon" />
     <title>@ViewData["Title"] - Capstone.Web</title>
 
     <environment include="Development">
